defaultTasks 'clean', 'build', 'remap'

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'eclipse'

group = 'cn.nukkit'
version = '1.0-SNAPSHOT'
description = "Nukkit"

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile("com.google.code.gson:gson:2.4",
            "org.fusesource.jansi:jansi:1.11",
            "org.yaml:snakeyaml:1.16",
            "jline:jline:2.13"
    )

    testCompile group: 'junit', name: 'junit', version: '4.11'
}

compileJava {
    options.encoding = 'UTF-8'
}
